# kd-em-ros-controller

./: .gitignore  .ros2_kctrl_aliases.sh  CONTRIBUTING.md  K-Controller Command overview.xlsx  KCTRL_USAGE.md  README.md  ros2_kctrl_bash_commands.md  run_kctrl.sh
Lists/: alias_guide.md  ros2_kctrl_bash_commands.md
assets/: K-Controller Command overview.xlsx  List of all runtime_params.csv.xlsx  List_of_all_params.csv  alias_guide.md
install/: local_setup.sh  setup.sh
install/ros_kctrl_custom_interfaces/share/ros_kctrl_custom_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_kctrl_custom_interfaces/share/ros_kctrl_custom_interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_ros_kctrl_custom_interfaces__rosidl_generator_cExport.cmake  export_ros_kctrl_custom_interfaces__rosidl_generator_pyExport.cmake  export_ros_kctrl_custom_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_ros_kctrl_custom_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  ros_kctrl_custom_interfaces__rosidl_typesupport_cExport.cmake  ros_kctrl_custom_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  ros_kctrl_custom_interfaces__rosidl_typesupport_introspection_cExport.cmake  ros_kctrl_custom_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  (+2 more)
install/ros_kctrl_interface_pkg/include/: pu_params.xml
install/ros_kctrl_interface_pkg/include/ros_kctrl_interface_pkg/: ros2ctrl_udp_client.hpp  ros2ctrl_udp_receiver.hpp
install/ros_kctrl_interface_pkg/lib/ros_kctrl_interface_pkg/: ros2ctrl_udp_receiver  ros2ctrl_udp_reciever  ros2ctrl_wrapper_node
install/ros_kctrl_interface_pkg/share/ros_kctrl_interface_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
refined_webapp_dev/backend/: notes.md  package-lock.json  package.json  server.js
refined_webapp_dev/frontend/: package-lock.json  package.json
refined_webapp_dev/frontend/src/: App.tsx
refined_webapp_dev/frontend/src/components/: MapArea.jsx  geoUtils.js
src/: test.py
src/em_data_analyzer/: CMakeLists.txt  README.md  package.xml  run.sh
src/em_data_analyzer/config/: analyzer_config.yaml  analyzer_rviz.rviz
src/em_data_analyzer/include/em_data_analyzer/: pointcloud_analyzer.hpp
src/em_data_analyzer/launch/: analyzer.launch.py  test_analyzer.launch.py
src/em_data_analyzer/src/: accumulate_swaths_node.py  dummy_pointcloud_publisher.py  pointcloud_analyzer.cpp  pointcloud_analyzer_main.cpp  pointcloud_analyzer_node.cpp  publish_dummy_gps.py  publish_dummy_leg_status.py
src/ppnode/: CMakeLists.txt  package.xml
src/ppnode/include/ppnode/: path_planner.hpp  ppnode.hpp  utils.hpp
src/ppnode/src/: path_planner.cpp  ppnode.cpp  ppnode_impl.cpp
src/ros2_kctrl_custom_interfaces/: CMakeLists.txt  LICENSE  package.xml
src/ros2_kctrl_custom_interfaces/msg/: KctrlDeviceDisconnected.msg  KctrlPUParams.msg  KctrlParameters.msg
src/ros2_kctrl_custom_interfaces/srv/: RecordingControl.srv  SetPUParameters.srv  UpdateRecordingPath.srv
src/ros2_kctrl_interface_pkg/: .ros2_kctrl_aliases.sh  CMakeLists.txt  KCTRL_USAGE.md  LICENSE  README.md  package.xml  run_kctrl.sh
src/ros2_kctrl_interface_pkg/config/: kctrl_config.yaml
src/ros2_kctrl_interface_pkg/include/: pu_params.xml
src/ros2_kctrl_interface_pkg/include/ros2_kctrl_interface_pkg/: ros2ctrl_udp_receiver.hpp  simple_udp.hpp
src/ros2_kctrl_interface_pkg/launch/: ros2_ctrl.launch.py
src/ros2_kctrl_interface_pkg/src/: ros2ctrl_udp_client.cpp  ros2ctrl_udp_receiver.cpp  ros2ctrl_wrapper_node.cpp  simple_udp.cpp
src/ros_kctrl_custom_interfaces/: CMakeLists.txt  package.xml
src/ros_kctrl_custom_interfaces/msg/: KctrlDetectedDevices.msg  KctrlDevice.msg  KctrlInfoWarnError.msg  KctrlMulticast.msg  KctrlStatus.msg
src/ros_kctrl_custom_interfaces/srv/: PUParameters.srv  SounderCommand.srv
src/ros_kctrl_interface_pkg/: CMakeLists.txt  README.md  kctrl_config.yaml  run_kctrl.sh
src/ros_kctrl_interface_pkg/config/: kctrl_config.yaml
src/ros_kctrl_interface_pkg/include/ros_kctrl_interface_pkg/: ros2ctrl_udp_client.hpp  ros2ctrl_udp_receiver.hpp
src/ros_kctrl_interface_pkg/install/: local_setup.sh  setup.bash  setup.sh
src/ros_kctrl_interface_pkg/install/ros_kctrl_interface_pkg/share/ros_kctrl_interface_pkg/: package.dsv  package.ps1  package.sh
src/ros_kctrl_interface_pkg/launch/: ros2_ctrl.launch.py
src/ros_kctrl_interface_pkg/log/: latest_build
src/ros_kctrl_interface_pkg/src/: ros2ctrl_udp_client.cpp  ros2ctrl_udp_receiver.cpp  ros2ctrl_wrapper_node.cpp  simple_udp.cpp
src/ros_kctrl_interface_pkg/src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/ros_kctrl_interface_pkg/src/log/: latest_build
src/ros_otter_control_pkg/: CMakeLists.txt  README.md  package.xml  run.sh
src/ros_otter_control_pkg/config/: otter_config.yaml
src/ros_otter_control_pkg/include/ros_otter_control_pkg/: otter_tcp_node.hpp
src/ros_otter_control_pkg/src/: Otter_TCP_node.cpp  dummy_otter_tcp_server.py
src/ros_otter_custom_interfaces/: CMakeLists.txt  package.xml
src/ros_otter_custom_interfaces/msg/: ErrorInfo.msg  GpsInfo.msg  ImuInfo.msg  Leg.msg  ModeInfo.msg  OtterInfo.msg  Paths.msg  ShadowAnalysis.msg  ShadowCell.msg  SurveyInfo.msg  SwathLineStats.msg  Vertex.msg
src/ros_otter_custom_interfaces/srv/: CourseMode.srv  LegMode.srv  ManualMode.srv  SetParameters.srv  StationMode.srv
src/ros_path_publisher/: CMakeLists.txt  package.xml
src/ros_path_publisher/include/path_publisher/: utils.hpp
src/ros_path_publisher/src/: leg_publisher.cpp
web_app/backend/: package-lock.json  package.json  server.js
web_app/ros2-map-webapp/: notes.md  package-lock.json  package.json
web_app/ros2-map-webapp/src/: App.tsx
web_app/ros2-map-webapp/src/api/: SignalR.js  api.ts
web_app/ros2-map-webapp/src/components/: MapArea.jsx
web_app/ros2-map-webapp/src/icons/: LeafletIcons.js
(+111 files in other folders)
